@@ -9,7 +9,7 @@
  */
 
 /*
- * Copyright (C) 2001, 2004, 2005, 2010, 2011, 2012
+ * Copyright (C) 2001, 2004, 2005, 2010, 2011, 2012, 2013
  * the Free Software Foundation, Inc.
  * 
  * This file is part of GAWK, the GNU implementation of the
