@@ -6,7 +6,7 @@
  */
 
 /*
- * Copyright (C) 2001, 2004, 2011, 2012 the Free Software Foundation, Inc.
+ * Copyright (C) 2001, 2004, 2011, 2012, 2013 the Free Software Foundation, Inc.
  * 
  * This file is part of GAWK, the GNU implementation of the
  * AWK Programming Language.
