@@ -11,7 +11,8 @@
  */
 
 /*
- * Copyright (C) 2002, 2003, 2004, 2011, 2012 the Free Software Foundation, Inc.
+ * Copyright (C) 2002, 2003, 2004, 2011, 2012, 2013
+ * the Free Software Foundation, Inc.
  * 
  * This file is part of GAWK, the GNU implementation of the
  * AWK Programming Language.
