@@ -7,7 +7,7 @@
  */
 
 /*
- * Copyright (C) 2009, 2010, 2011, 2012 the Free Software Foundation, Inc.
+ * Copyright (C) 2009, 2010, 2011, 2012, 2013 the Free Software Foundation, Inc.
  * 
  * This file is part of GAWK, the GNU implementation of the
  * AWK Programming Language.
