@@ -1,3 +1,9 @@
+2013-04-16         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* filefuncs.c, fnmatch.c, fork.c, ordchr.c, readdir.c, readfile.c,
+	revoutput.c, revtwoway.c, rwarray.c, rwarray0.c, stack.c, stack.h,
+	testext.c, time.c: Update copyright year.
+
 2013-03-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkdirfd.h: Improve test for doing own dirfd function. Needed
