@@ -4,7 +4,11 @@
 	* command.c: Ditto.
 	* dfa.h, dfa.c: Minor edits to sync with GNU grep.
 	* gettext.h: Sync with gettext 0.18.2.1.
-	* random.h: Remove obsolete __P macro and use. Update copyright.
+	* random.h: Remove obsolete __P macro and use. Update copyright year.
+	* Makefile.am, array.c, builtin.c, cint_array.c, cmd.h, debug.c,
+	eval.c, ext.c, field.c, gawkapi.c, gawkapi.h, gettext.h, int_array.c,
+	interpret.h, msg.c, node.c, profile.c, re.c, replace.c, str_array.c,
+	symbol.c: Update copyright year.
 
 2013-04-14         Arnold D. Robbins     <arnold@skeeve.com>
 
